--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ hydra-core = "^1.2.0"
 omegaconf = "^2.3.0"
 underactuated = "^2024.4.27"
 pyyaml = "^6.0.1"
+pyqt6 = "^6.10.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.1"
